print_location is not reliable enough (printing register info)

XMLWordPrintable

    • b15

        I had contributed some improvements for the error reporting step "printing register info" with JDK-8207342.
        But there are still parts which crash too easily. Oop and klass checks should get improved.
        I have seen
        "[error occurred during error reporting (printing register info), id 0xe0000000, Internal Error (/openjdk/jdk/src/hotspot/share/oops/klass.inline.hpp:63)]"
        when using -XX:+CrashGCForDumpingJavaThread with recent jdk12.

        "[error occurred during error reporting (printing register info)" can also be found in many hs_err files in the internet. This change is supposed to help people to investigate the root cause of crashes by providing the register info much more reliably.

              Assignee:
              Martin Doerr
              Reporter:
              Martin Doerr
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: