8210754: print_location is not reliable enough (printing register info)

Reviewed-by: stuefe, coleenp